--- a/Notes/Week4/week4.tex
+++ b/Notes/Week4/week4.tex
@@ -237,7 +237,7 @@
             &\approx [\ce{A}]_0\left\{ 1+\frac{1}{-k_2}k_2\e[-k_1t] \right\}\\
             &= [\ce{A}]_0(1-\e[-k_1t])
         \end{align*}
-        \item If $k_1\gg k_2$, he reaction reduces to
+        \item If $k_1\gg k_2$, the reaction reduces to
         \begin{equation*}
             [\ce{P}] \approx [\ce{A}]_0(1-\e[-k_2t])
         \end{equation*}
@@ -307,12 +307,12 @@
             \item Mechanism 1.
             \begin{align*}
                 \ce{NO(g) + O2(g)} &\Longleftrightarrows[k_1][k_{-1}] \ce{NO3(g)}\\
-                \ce{NO3(g) + NO(g)} &\ce{->[$k_2$]} \ce{2 NO2(g)}
+                \ce{NO3(g) + NO(g)} &\xRightarrow{k_2} \ce{2 NO2(g)}
             \end{align*}
             \item Mechanism 2.
             \begin{align*}
                 \ce{2NO(g)} &\Longleftrightarrows[k_1][k_{-1}] \ce{N2O2(g)}\\
-                \ce{N2O2(g) + O2(g)} &\ce{->[$k_2$]} \ce{2 NO2(g)}
+                \ce{N2O2(g) + O2(g)} &\xRightarrow{k_2} \ce{2 NO2(g)}
             \end{align*}
         \end{itemize}
         \item One experiment to design is to capture or otherwise detect the intermediate species.
