--- a/PSets/PSet1/pset1.tex
+++ b/PSets/PSet1/pset1.tex
@@ -219,7 +219,7 @@
             &= \frac{2\pi}{(\pi\kB T)^{3/2}}\cdot\frac{(5)(3)(1)}{(2/\kB T)^{(5+1)/2}}\left( \frac{\pi}{1/\kB T} \right)^{1/2}\\
             &= \frac{15}{4}(\kB T)^2
         \end{align*}
-        where we have evaluated the integral using Table 27.1 in my notes. Thus, we have that
+        where we have evaluated the integral using Table 1.1 in my notes. Thus, we have that
         \begin{align*}
             \sigma_\varepsilon^2 &= \prb{\varepsilon^2}-\prb{\varepsilon}^2\\
             &= \frac{15}{4}(\kB T)^2-\frac{9}{4}(\kB T)^2\\
@@ -377,12 +377,12 @@
         \begin{proof}[Answer]
             The collision frequency is
             \begin{equation*}
-                z_A = \sqrt{2}\rho\sigma\prb{u}
+                z_{\ce{A}} = \sqrt{2}\rho\sigma\prb{u}
                 = \sqrt{2}\cdot\frac{P\NA}{RT}\cdot\sigma_{\ce{Xe}}\cdot\sqrt{\frac{8RT}{\pi M}}
             \end{equation*}
             It follows that the time $t$ between collisions is
             \begin{align*}
-                t &= \frac{1}{z_A}\\
+                t &= \frac{1}{z_{\ce{A}}}\\
                 &= \frac{\sqrt{\pi RTM}}{4\NA P\sigma_{\ce{Xe}}}\\
                 &= \frac{\sqrt{\pi(\SI[per-mode=fraction]{8.31}{\joule\per\mole\per\kelvin})(\SI{300}{\kelvin})(\SI[per-mode=fraction]{0.03995}{\kilo\gram\per\mole})}}{4\NA(\SI{133}{\pascal})(\SI{7.50e-19}{\square\meter})}\\
                 \Aboxed{t &= \SI{7.36e-8}{\second}}
