--- a/preamble.tex
+++ b/preamble.tex
@@ -60,13 +60,13 @@
 \colorlet{pux}{blx!50!rex!50!magenta}
 
 \DeclareMathOperator{\Prob}{Prob}
+\DeclareMathOperator{\pH}{pH}
+\DeclareMathOperator{\pOH}{pOH}
 
 \setchemfig{atom sep=2em,fixed length=true,bond offset=3pt}
 
 \newcommand{\kB}{k_\text{B}}
 \newcommand{\NA}{N_\text{A}}
-\newcommand{\pH}{\text{pH}}
-\newcommand{\pOH}{\text{pOH}}
 
 \newcommand{\e}[1][]{\text{e}^{#1}}
 \newcommand{\prb}[1]{\left\langle{#1}\right\rangle}
