Isotropy / Internal Energy / COM Assumptions

--- a/preamble.tex
+++ b/preamble.tex
@@ -46,7 +46,7 @@
 \addbibresource{../main.bib}
 \DefineBibliographyStrings{english}{bibliography={References}}
 
-\usetikzlibrary{backgrounds,decorations.markings,decorations.text,fpu,intersections}
+\usetikzlibrary{backgrounds,decorations.markings,decorations.text,fpu,intersections,calc}
 \colorlet{blx}{blue!90!green!80}
 \colorlet{bly}{blue!90!green!60}
 \colorlet{blz}{blue!90!green!40}
