--- a/Notes/Week6/week6.tex
+++ b/Notes/Week6/week6.tex
@@ -118,5 +118,217 @@
 
 
 
+\section{Isotropy, Internal Energy, and Center of Mass Assumptions}
+\begin{itemize}
+    \item \marginnote{5/4:}Doing away with the assumption that the spheres are isotropic.
+    \begin{figure}[h!]
+        \centering
+        \begin{tikzpicture}
+            \fill [orx]
+                (0,0) -- (-1.7,2.91) -- (-1.7,-2.91) -- cycle
+                (-1.8,0) ellipse (4mm and 3cm)
+            ;
+            \draw
+                (0,0) -- (-1.7,2.91)
+                (0,0) -- (-1.7,-2.91)
+                (-1.8,0) ellipse (4mm and 3cm)
+            ;
+    
+            \draw [dash pattern=on 10pt off 2pt on 2pt off 2pt] (-3,0) -- (3,0);
+            \draw [dashed] circle (1.8cm);
+    
+            \draw [thick]
+                (0,0) circle (1cm)
+                (20:1.8) circle (8mm)
+            ;
+            \draw [semithick] (-0.13,0)
+                to[out=90,in=90,out looseness=2.5,in looseness=2] (1,0)
+                to[out=-90,in=-90,out looseness=2,in looseness=2.5] cycle
+            ;
+            \draw [semithick,looseness=1.3,xshift=-4.2mm,yshift=5mm,rotate=40] (-0.44,0)
+                to[out=90,in=90] (0.44,0)
+                to[out=-90,in=-90] cycle
+            ;
+            \draw [semithick,looseness=1.3,xshift=-4.2mm,yshift=-5mm,rotate=-40] (-0.44,0)
+                to[out=90,in=90] (0.44,0)
+                to[out=-90,in=-90] cycle
+            ;
+            % \draw [semithick,looseness=1.3,xshift=-6mm,rotate=90] (-0.4,0) to[out=90,in=90] (0.4,0);
+            \draw [semithick] (-0.81,0.3) to[bend right=40,looseness=0.85] (-0.81,-0.3);
+    
+            \draw (0,0) node[circle,fill,inner sep=1.5pt]{} -- (20:1.8) node[circle,fill,inner sep=1.5pt]{};
+    
+            \small
+            \node at (-0.3,0) {\ce{C}};
+            \node at (-0.5,0.45) {\ce{H}};
+            \node at (-0.5,-0.45) {\ce{H}};
+            \node at (0.5,-0.3) {\ce{I}};
+            \node at ([xshift=4mm]20:1.8) {\ce{Rb}};
+    
+            \footnotesize
+            \node [align=center] at (-3.5,-1.3) {Cone of\\non-reactivity}
+                edge [-latex] (-2.3,-0.5)
+            ;
+        \end{tikzpicture}
+        \caption{Molecules are not isotropic.}
+        \label{fig:noIsotropy}
+    \end{figure}
+    \begin{itemize}
+        \item Consider the reaction
+        \begin{equation*}
+            \ce{Rb(g) + CH3I(g)} \Longrightarrow \ce{RbI(g) + CH3(g)}
+        \end{equation*}
+        \item The rubidium atom must collide with the iodomethane in the vicinity of the iodine atom for a reaction to occur.
+        \item Indeed, many molecules have a \textbf{cone of non-reactivity}.
+    \end{itemize}
+    \item Additionally, the internal energy of the reactants can affect the cross section of a reaction.
+    \begin{itemize}
+        \item Consider the reaction
+        \begin{equation*}
+            \ce{H2+(g) + He(g)} \Longrightarrow \ce{HeH+(g) + H(g)}
+        \end{equation*}
+        \item As the reactant molecule \ce{H2+} passes through different vibrational states, its reaction cross section changes.
+        \item We only need to understand that other types of energy can have an effect qualitatively; we do not need to work with the shape of the curves quantitatively.
+    \end{itemize}
+    \item A reactive collision can be described in a center-of-mass coordinate system.
+    \begin{figure}[h!]
+        \centering
+        \begin{tikzpicture}
+            \small
+            \draw [-stealth] (2,-1.5) -- node[fill=white]{Increasing time} ++(6,0);
+    
+            \footnotesize
+            \draw [dash pattern=on 4pt off 3pt]
+                (-0.4,2.4) coordinate(A1) -- (5,1.7) coordinate(A3) -- (10.4,2.9) coordinate (A5)
+                (0.4,0.6) coordinate(B1) -- (5,1.3) coordinate(B3) -- (9.6,0.1) coordinate (B5)
+            ;
+    
+            \draw [semithick,-latex] (A1) -- ($(A1)!0.28!(A3)$) node[above=1pt]{$\mathbf{u}_{\ce{A}}$};
+            \draw [semithick,-latex] (B1) -- ($(B1)!0.15!(B3)$) node[below=2pt]{$\mathbf{u}_{\ce{B}}$};
+            \draw [semithick,-latex] (A3) -- ($(A3)!0.21!(A5)$) node[above=1pt]{$\mathbf{u}_{\ce{C}}$};
+            \draw [semithick,-latex] (B3) -- ($(B3)!0.24!(B5)$) node[below=2pt]{$\mathbf{u}_{\ce{D}}$};
+    
+            \begin{scope}
+                \draw (0.7,0.4) node[below]{3} -- ++(0,3) node[above]{2} -- ++(-1.4,-0.8) node[above]{1} -- ++(0,-3) node[below]{4} -- cycle;
+    
+                \draw [densely dashed] (A1) -- (B1);
+                % \draw [semithick,-latex] (-0.4,2.4) --
+    
+                \fill [ball color=blx] (A1) circle (2mm) node[below=2mm]{\ce{A}};
+                \fill [ball color=rex] (B1) circle (2mm) node[left=2mm]{\ce{B}};
+    
+                \draw [semithick,-latex] ($(A1)!0.5!(B1)$) coordinate(COM1) -- ++(1.1,0);
+                \filldraw [fill=white] (COM1) circle (2pt);
+            \end{scope}
+    
+            \begin{scope}[xshift=2.5cm]
+                \draw (0.7,0.4) -- ++(0,3) -- ++(-1.4,-0.8) -- ++(0,-3) -- cycle;
+    
+                \draw [densely dashed] ($(A1)!0.5!(A3)$) coordinate(A2) -- ($(B1)!0.5!(B3)$) coordinate(B2);
+    
+                \fill [ball color=blx] (A2) circle (2mm);
+                \fill [ball color=rex] (B2) circle (2mm);
+    
+                \draw [semithick,-latex] (0,1.5) -- ++(1.1,0);
+                \filldraw [fill=white] (0,1.5) circle (2pt);
+            \end{scope}
+    
+            \begin{scope}[xshift=5cm]
+                \draw (0.7,0.4) -- ++(0,3) -- ++(-1.4,-0.8) -- ++(0,-3) -- cycle;
+    
+                \fill [ball color=pux] (A3) circle (2mm);
+                \fill [ball color=pux] (B3) circle (2mm);
+    
+                \draw [semithick,-latex] ($(A3)!0.5!(B3)$) coordinate (COM3) -- ++(1.1,0);
+            \end{scope}
+    
+            \begin{scope}[xshift=7.5cm]
+                \draw (0.7,0.4) -- ++(0,3) -- ++(-1.4,-0.8) -- ++(0,-3) -- cycle;
+    
+                \draw [densely dashed] ($(A3)!0.5!(A5)$) coordinate(A4) -- ($(B3)!0.5!(B5)$) coordinate(B4);
+    
+                \fill [ball color=grx] (A4) circle (2mm);
+                \fill [ball color=orx] (B4) circle (2mm);
+    
+                \draw [semithick,-latex] (0,1.5) -- ++(1.1,0);
+                \filldraw [fill=white] (0,1.5) circle (2pt);
+            \end{scope}
+    
+            \begin{scope}[xshift=10cm]
+                \draw (0.7,0.4) -- ++(0,3) -- ++(-1.4,-0.8) -- ++(0,-3) -- cycle;
+    
+                \draw [densely dashed] (A5) -- (B5);
+    
+                \fill [ball color=grx] (A5) circle (2mm) node[below=2mm,xshift=1mm]{\ce{C}};
+                \fill [ball color=orx] (B5) circle (2mm) node[above right=1mm]{\ce{D}};
+    
+                \draw [semithick,-latex] ($(A5)!0.5!(B5)$) coordinate(COM5) -- ++(1.1,0) node[right]{$\mathbf{u}_\text{CM}$};
+                \filldraw [fill=white] (COM5) circle (2pt);
+            \end{scope}
+    
+            \node [align=center] at (-2,0.5) {Center\\of mass}
+                edge [-latex,shorten >=2.5mm] (COM1)
+            ;
+        \end{tikzpicture}
+        \caption{Center-of-mass coordinate system.}
+        \label{fig:COMcoordinates}
+    \end{figure}
+    \begin{itemize}
+        \item Consider the collision and subsequent scattering process for the bimolecular reaction
+        \begin{equation*}
+            \ce{A(g) + B(g)} \Longrightarrow \ce{C(g) + D(g)}
+        \end{equation*}
+        \item Before the collision, \ce{A} and \ce{B} are traveling with velocities $\mathbf{u}_{\ce{A}}$ and $\mathbf{u}_{\ce{B}}$, respectively.
+        \item The collision generates molecules \ce{C} and \ce{D}, which then move away from each other with velocities $\mathbf{u}_{\ce{C}}$ and $\mathbf{u}_{\ce{D}}$, respectively.
+        \item $\mathbf{R}$, the location of the center of mass, is given by
+        \begin{align*}
+            \mathbf{R} &= \frac{m_{\ce{A}}\mathbf{r}_{\ce{A}}+m_{\ce{B}}\mathbf{r}_{\ce{B}}}{M}&
+            M &= m_{\ce{A}}+m_{\ce{B}}
+        \end{align*}
+        \item The velocity $\mathbf{u}_\text{cm}$ of the center of mass is the time derivative of the position vector. Therefore, it is given by
+        \begin{equation*}
+            \mathbf{u}_\text{cm} = \frac{m_{\ce{A}}\mathbf{u}_{\ce{A}}+m_{\ce{B}}\mathbf{u}_{\ce{B}}}{M}
+        \end{equation*}
+        \item We assume that this is an elastic collision (thus, energy is conserved).
+        \item The total kinetic energy is given by
+        \begin{equation*}
+            \text{KE}_\text{react} = \frac{1}{2}m_{\ce{A}}u_{\ce{A}}^2+\frac{1}{2}m_{\ce{B}}u_{\ce{B}}^2
+        \end{equation*}
+        \item Combining the fact that the relative speed of the two molecules is given by $\mathbf{u}_\text{r}=\mathbf{u}_{\ce{A}}-\mathbf{u}_{\ce{B}}$ with the definition of $\mathbf{u}_\text{cm}$ yields
+        \begin{align*}
+            \mathbf{u}_{\ce{A}} &= \mathbf{u}_\text{cm}+\frac{m_{\ce{B}}}{M}\mathbf{u}_\text{r}&
+            \mathbf{u}_{\ce{B}} &= \mathbf{u}_\text{cm}-\frac{m_{\ce{A}}}{M}\mathbf{u}_\text{r}
+        \end{align*}
+        \begin{itemize}
+            \item Note that the change in plus to minus sign between the two above forms hails from our definition of relative speed as \ce{A} minus \ce{B} and not the other way around (as we could also very well define it). In other words, it's just a convention thing, and all that matters is that we're consistent.
+        \end{itemize}
+        \item It follows that
+        \begin{align*}
+            \text{KE}_\text{react} &= \frac{m_{\ce{A}}}{2}\left( \mathbf{u}_\text{cm}+\frac{m_{\ce{B}}}{M}\mathbf{u}_\text{r} \right)^2+\frac{m_{\ce{B}}}{2}\left( \mathbf{u}_\text{cm}-\frac{m_{\ce{A}}}{M}\mathbf{u}_\text{r} \right)^2\\
+            &= \frac{1}{2}Mu_\text{cm}^2+\frac{1}{2}\mu u_\text{r}^2
+        \end{align*}
+        \item Thus, the kinetic energy is composed of two contributions: one due to the motion of the center of mass, and one due to the relative motion of the two colliding molecules.
+        \item We can do a similar analysis for the products to determine that
+        \begin{equation*}
+            \text{KE}_\text{prod} = \frac{1}{2}Mu_\text{cm}^2+\frac{1}{2}\mu'u_\text{r}'{}^2
+        \end{equation*}
+        \item Note that momentum is conserved, i.e.,
+        \begin{equation*}
+            m_{\ce{A}}\mathbf{u}_{\ce{A}}+m_{\ce{B}}\mathbf{u}_{\ce{B}} = m_{\ce{C}}\mathbf{u}_{\ce{C}}+m_{\ce{D}}\mathbf{u}_{\ce{D}}
+        \end{equation*}
+        \item This implies that $\mathbf{u}_\text{cm}$ does not change from reactants to products.
+        \item The energy associated with the motion of the center of mass is therefore constant, and we will ignore its constant contribution to the total kinetic energy.
+        \begin{equation*}
+            E_\text{react,int}+\frac{1}{2}\mu u_\text{r}^2 = E_\text{prod,int}+\frac{1}{2}\mu'u_\text{r}'{}^2
+        \end{equation*}
+        \begin{itemize}
+            \item $E_\text{react,int}$ and $E_\text{prod,int}$ are the total internal energies of the reactants and products, respectively.
+            \item This internal energy takes into account all the degrees of freedom other than translation.
+        \end{itemize}
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
