--- a/preamble.tex
+++ b/preamble.tex
@@ -42,6 +42,7 @@
 
 \DeclareSIUnit{\angstrom}{\textup{\AA}}
 \DeclareSIUnit{\molar}{M}
+\DeclareSIUnit{\molecule}{molecule}
 
 \addbibresource{../main.bib}
 \DefineBibliographyStrings{english}{bibliography={References}}
